--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 		  <artifactId>commons-lang</artifactId>
 		  <version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.huoli</groupId>
+			<artifactId>httptask</artifactId>
+			 <version>1.0.36</version>
+		</dependency>
     </dependencies>
 
 </project>
